# DigimonGame

./: .gitignore  CMakeLists.txt  README  notes
game/: background.cpp  background.h  chunk.h  clock.h  collisionStrategy.cpp  collisionStrategy.h  drawable.h  engine.cpp  engine.h  explodingSprite.cpp  explodingSprite.h  faller.cpp  frameFactory.cpp  hud.cpp  hud.h  multisprite.cpp  patroller.h  player.cpp  player.h  randomguy.cpp  renderContext.h  shootingSprite.cpp  sound.cpp  temp.txt  textureWrapper.cpp  textureWrapper.h  twowayexplodingmultisprite.cpp  twowaymultisprite.cpp  viewport.cpp
game/images/: agumon.xcf  back0.xcf  back1.xcf  back1_old.xcf  crest4.xcf  digivolve.xcf  fireball_old.xcf  gesomon_0.xcf  gesomon_2_explosion.xcf  logo.xcf  patamon.xcf  small_greymon.xcf  small_greymon_old2.xcf
game/xmlSpec/: game.xml
tracker/: .nfs000000000646361b0000048f  Makefile  background.cpp  bullet.cpp  bulletPool.cpp  bulletPool.h  clock.cpp  collisionStrategy.cpp  collisionStrategy.h  drawable.cpp  drawable.h  engine.cpp  engine.h  explodingSprite.cpp  explodingSprite.h  faller.cpp  faller.h  frameFactory.h  hud.cpp  hud.h  ioMod.cpp  ioMod.h  main.cpp  multisprite.cpp  multisprite.h  patroller.cpp  patroller.h  player.cpp  player.h  playernonexploding.cpp  playernonexploding.h  randomguy.h  renderContext.cpp  sound.cpp  sprite.cpp  sprite.h  textureWrapper.cpp  textureWrapper.h  twowayexplodingmultisprite.cpp  twowayexplodingmultisprite.h  (+2 more)
tracker/images/: agumon.xcf  agumon_old.xcf  back0.xcf  back1.xcf  back2.xcf  back3.xcf  back4.xcf  back_clean.xcf  blank.xcf  (+9 more)
(+1 files in other folders)
